--- a/index.html
+++ b/index.html
@@ -11,3 +11,39 @@
     <p>Esta es mi página personal.</p>
 </body>
 </html>
+<!DOCTYPE html>
+<html lang="fr">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Site avec Onglets</title>
+    <link rel="stylesheet" href="styles.css">
+</head>
+<body>
+
+    <h1>Mon Site avec Onglets</h1>
+
+    <div class="tabs">
+        <button class="tablinks" onclick="openTab(event, 'Accueil')" id="defaultTab">Accueil</button>
+        <button class="tablinks" onclick="openTab(event, 'À propos')">À propos</button>
+        <button class="tablinks" onclick="openTab(event, 'Contact')">Contact</button>
+    </div>
+
+    <div id="Accueil" class="tabcontent">
+        <h2>Accueil</h2>
+        <p>Bienvenue sur la page d'accueil.</p>
+    </div>
+
+    <div id="À propos" class="tabcontent">
+        <h2>À propos</h2>
+        <p>Découvrez plus d'informations sur nous ici.</p>
+    </div>
+
+    <div id="Contact" class="tabcontent">
+        <h2>Contact</h2>
+        <p>Contactez-nous via ce formulaire.</p>
+    </div>
+
+    <script src="script.js"></script>
+</body>
+</html>
