--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="fr">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,8 +7,9 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <h1>¡Hola, soy [Tu Nombre]!</h1>
-    <p>Esta es mi página personal.</p>
+    <h1>Viviana Lucero</h1>
+    <p>Salut !
+    Je m'appelle Viviana Lucero. Equatorienne en France.</p>
 </body>
 </html>
 <!DOCTYPE html>
